# DockStack

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
apps/extension/: package.json  tsconfig.json  wxt.config.ts
apps/extension/.wxt/types/: imports-module.d.ts  imports.d.ts  paths.d.ts
apps/extension/public/injected/: network-hook.js
apps/extension/src/components/: CaptureTable.tsx  DatasetList.tsx  DatasetPreview.tsx  Panel.tsx  RequestDetail.tsx  SessionList.tsx  StatsCards.tsx
apps/extension/src/entrypoints/: background.ts  capture.content.ts  content.ts
apps/extension/src/entrypoints/options/: index.html  main.tsx
apps/extension/src/entrypoints/popup/: App.tsx
apps/extension/src/lib/: consent.ts  dataset.ts  devtools-capture.ts  download.ts  native.ts  scope.ts  session.ts  settings.ts  storage.ts  summary.ts  types.ts
apps/native-core/: Cargo.toml
apps/native-core/src/: main.rs
crates/ai-engine/: Cargo.toml
crates/ai-engine/src/: lib.rs
crates/capture-core/: Cargo.toml
crates/capture-core/src/: lib.rs
crates/export-engine/: Cargo.toml
crates/export-engine/src/: lib.rs
crates/secret-policy/: Cargo.toml
crates/secret-policy/src/: lib.rs
crates/storage-duckdb/: Cargo.toml
crates/storage-duckdb/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
docs/: architecture.md  chrome-web-store-listing.md  development.md  install.md  native-host.md  permissions.md  privacy-policy.md  release-template.md  security.md
scripts/: install-native-host.ps1  install-native-host.sh
