[workspace]
members = [
  "apps/native-core",
  "crates/capture-core",
  "crates/storage-sqlite",
  "crates/storage-duckdb",
  "crates/export-engine",
  "crates/ai-engine",
  "crates/secret-policy"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["iamjxden"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
